V5.1.0 (June 1st, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • UPDATED: Support automation precedence
 * FIXED: Bug in honoring weather station custom settings

Automation App 5.0.6:
 • UPDATED: nMode automation precedence for setting ECO.  Other automations honor override by Nest Mode automation
 • FIXED: Issue in external temperature automation to check schedules for temperature settings to decide to end ECO settings
 • Added: Use Switches as a restriction for Automations

 V5.0.9 (May 13st, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • UPDATED: Cleanup of out of date automation children
 • UPDATED: Faster command processing
 • UPDATED: Improved error notification
 • FIXED: Small bugs and code cleanup

Automation App 5.0.5:
 • UPDATED: Ability to control which cameras turn on / off with Nest Mode automation

V5.0.8 (May 1st, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • UPDATED: Detects and notifies on installation issues
 • FIXED: Small bugs and optimization;  Quieting of logs

Automation App:
 • FIXED: Quieting of logs;  small bugs and optimizations

V5.0.7 (April 25th, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • FIXED: Bugs and made various stability improvements.

V5.0.5 (April 20th, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • UPDATED: Made a change to token distribution (based on Nest's suggestion).
 • FIXED: Constant overwriting of custom device names.

Automation App:
 • FIXED: Issues with notifications that was causing exceptions.
 • FIXED: Issues with duplicate notifications when Nest Mode automation is enabled.

V5.0.4 (April 11th, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • ADDED: Automations v5.0.2 will display a message and prevent any configuration when installed from the Marketplace.

V5.0.3 (April 6th, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • ADDED: Checking of Automation App Versions.
 • ADDED: Much Improved Logging of Automation Migrations from V4.5.2 -> V5.0.1
 • FIXED: As usual there are many bug fixes and tweaks.

V5.0.2 (April 2nd, 2017):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • FIXED: SMS notification issue.