@@ -27,22 +27,22 @@
                 "ver": "5.1.0"
             },
             "autoapp": {
-                "ver": "5.0.6"
+                "ver": "5.1.0"
             },
             "thermostat": {
-                "ver": "5.0.6"
+                "ver": "5.1.0"
             },
             "protect": {
-                "ver": "5.0.3"
+                "ver": "5.1.0"
             },
             "camera": {
-                "ver": "5.0.6"
+                "ver": "5.1.0"
             },
             "presence": {
-                "ver": "5.0.2"
+                "ver": "5.1.0"
             },
             "weather": {
-                "ver": "5.0.5"
+                "ver": "5.1.0"
             }
         }
     },
