@@ -10,19 +10,19 @@
       "ver": "5.0.10"
     },
     "thermostat": {
-      "ver": "5.0.6"
+      "ver": "5.1.0"
     },
     "protect": {
-      "ver": "5.0.2"
+      "ver": "5.1.0"
     },
     "camera": {
-      "ver": "5.0.5"
+      "ver": "5.1.0"
     },
     "presence": {
-      "ver": "5.0.1"
+      "ver": "5.1.0"
     },
     "weather": {
-      "ver": "5.0.4"
+      "ver": "5.1.0"
     }
   },
   "token": {
@@ -44,19 +44,19 @@
         "ver": "5.0.10"
       },
       "thermostat": {
-        "ver": "5.0.6"
+        "ver": "5.1.0"
       },
       "protect": {
-        "ver": "5.0.2"
+        "ver": "5.1.0"
       },
       "camera": {
-        "ver": "5.0.5"
+        "ver": "5.1.0"
       },
       "presence": {
-        "ver": "5.0.1"
+        "ver": "5.1.0"
       },
       "weather": {
-        "ver": "5.0.4"
+        "ver": "5.1.0"
       }
     }
   },
