@@ -1,3 +1,9 @@
+<p style="font-size: 15px;"><strong>V5.1.0 (June 5th, 2017):</strong><p>
+<hr noshade>
+<ul style="font-size: 12px; padding: 0 10px 0 10px; Margin: 0;">
+    <li><strong>UPDATED:</strong> version number updated to match 5.1.x</li>
+</ul>
+<br>
 <p style="font-size: 15px;"><strong>V5.0.6 (June 1st, 2017):</strong><p>
 <hr noshade>
 <ul style="font-size: 12px; padding: 0 10px 0 10px; Margin: 0;">
